sql/opt_range.cc
@@ -7467,7 +7467,7 @@ void cost_group_min_max(TABLE* table, KEY *index_info, uint used_key_parts,
   double quick_prefix_selectivity;
   double io_cost;
   double cpu_cost= 0; /* TODO: CPU cost of index_read calls? */
-  DBUG_ENTER("TRP_GROUP_MIN_MAX::cost");
+  DBUG_ENTER("cost_group_min_max");
 
   table_records= table->file->records;
   keys_per_block= (table->file->block_size / 2 /
@@ -7971,7 +7971,15 @@ int QUICK_GROUP_MIN_MAX_SELECT::get_next()
 {
   int min_res= 0;
   int max_res= 0;
+#ifdef HPUX11
+  /*
+    volatile is required by a bug in the HP compiler due to which the
+    last test of result fails.
+  */
+  volatile int result;
+#else
   int result;
+#endif
   int is_last_prefix;
 
   DBUG_ENTER("QUICK_GROUP_MIN_MAX_SELECT::get_next");
